--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,13 @@
       min-height: 100vh;
     }
   </style>
+  <!-- IMPORTAR PARA ELEMENT PLUS -->
+  <!-- Import style -->
+  <link rel="stylesheet" href="//unpkg.com/element-plus/dist/index.css" />
+  <!-- Import Vue 3 -->
+  <script src="//unpkg.com/vue@3"></script>
+  <!-- Import component library -->
+  <script src="//unpkg.com/element-plus"></script>
 </head>
 <body>
   <div id="app"></div>
